<resources>
    <string name="app_name" translatable="false">Moo Kra Ta</string>
    <string name="register">Create Account</string>
    <string name="title_activity_test">Test</string>
    <string name="title_home">Home</string>
    <string name="title_menu">Menu</string>
    <string name="title_table">Table</string>
    <string name="title_tracking">Tracking</string>
    <string name="title_person">User</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="promo1" translatable="false">promo1</string>
    <string name="title_pork">Pork</string>
    <string name="title_seafood">Seafood</string>
    <string name="title_beef">Beef</string>
    <string name="title_vegetable">Vegetable</string>
    <string name="title_rice">Rice</string>
    <string name="title_drink">drink</string>
    <string name="pay_home">Pay at Home</string>
    <string name="pay_creditcard">Credit Card</string>
    <string name="pay_method">Payment Method</string>
    <string name="payment">Payment</string>
    <string name="confirm">Confirm</string>
    <string name="creditcard_no">Credit Card</string>
    <string name="add">Add</string>
    <string name="tracking_number">Tracking Number</string>
    <string name="signin">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="tracking_recieve_name">Receiever Name</string>
    <string name="total_price">Total Price</string>
    <string name="order_tracking">Order Tracking</string>
    <string name="create_table">Table Booking</string>
    <string name="amount_people">Amount of People</string>
    <string name="arrive_date">Arrive Date</string>
    <string name="date_format">DD-MM-YYYY</string>
    <string name="arrive_time">Arrive Time</string>
    <string name="special_request">Special Request</string>
    <string name="confirm_table">Confirm Table</string>
    <string name="user_info">User Information</string>
    <string name="booking">Table Booking Detail</string>
    <string name="your_order">Your Order</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="login">Login</string>
    <string name="total_cost">Total Cost</string>
    <string name="go_tracking">Go to Tracking</string>
    <string name="delete_cart">Delete Cart</string>
    <string name="tracking">Tracking</string>
    <string name="table_booking">Table Booking</string>
    <string name="booking_detail">Table Booking Detail</string>
    <string name="amount_of_people">Amount of People</string>
    <string name="confirm_order">Confirm</string>
    <string name="user_account">User Account</string>
</resources>
