<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="26dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/thai5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="ไทย"
                android:textSize="14dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/englishL"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textbe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="|"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/english5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="English"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="@+id/thai"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/create_account"
                android:textAlignment="center"
                android:textSize="40dp"
                app:fontFamily="@font/abril_fatface"
                app:layout_constraintBottom_toTopOf="@+id/regPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/regName"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/regEmail"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/regPassword"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="30dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/regConfimPass"
                app:layout_constraintStart_toStartOf="@+id/regConfimPass"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/regConfimPass"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/regPhoneNum"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/regAddress"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPersonName" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/regButtonRegist"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="58dp"
                    android:layout_marginBottom="18dp"
                    android:background="@drawable/button_round"
                    android:text="@string/register"
                    android:textColor="#FFFF"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/forLogin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/forLogin"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/regButtonRegist" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>