<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/thai4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="ไทย"
                android:textColor="#FFFFFF"
                android:textSize="14dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/englishL"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textbe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="|"
                android:textColor="#FFFFFF"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/english4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="English"
                android:textColor="#FFFFFF"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="@+id/thai"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/payment"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="50dp"
            app:fontFamily="@font/abril_fatface" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/total_cost2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/total_cost"
                android:textAlignment="center"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.459"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/total_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="#EEEEEE"
                android:padding="20dp"
                android:text="Total Cost"
                android:textAlignment="center"
                android:textSize="19dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.459"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/pay_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:text="@string/pay_method"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/radioGroup"
                app:layout_constraintTop_toTopOf="@+id/radioGroup" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginRight="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">


                <RadioButton
                    android:id="@+id/pay_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkButton"
                    android:padding="10dp"
                    android:text="@string/pay_home" />

                <RadioButton
                    android:id="@+id/pay_creditcard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkButton"
                    android:padding="10dp"
                    android:text="@string/pay_creditcard"

                    />

                <EditText
                    android:id="@+id/creditcard_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:ems="13"
                    android:hint="@string/creditcard_no"
                    android:inputType="textPersonName"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/creditcard_ccv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:ems="13"
                    android:hint="CCV"
                    android:inputType="textPassword"
                    android:textSize="14dp" />


                <EditText
                    android:id="@+id/creditcard_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:ems="13"
                    android:hint="Month/Year"
                    android:inputType="date"
                    android:textSize="14dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_confirm_credit"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/button_round"
                        android:text="@string/confirm"
                        android:textColor="#FFFFFF"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                </LinearLayout>

            </RadioGroup>


            <TextView
                android:id="@+id/button_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:text="@string/go_tracking"
                android:textAlignment="center"
                android:textSize="18dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="152dp"
                tools:layout_editor_absoluteY="0dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>