<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingDetail">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/thai6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="ไทย"
                android:textColor="#FFFFFF"
                android:textSize="14dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/englishL"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textbe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="|"
                android:textColor="#FFFFFF"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/english6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="English"
                android:textColor="#FFFFFF"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="@+id/thai"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/booking_detail"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="38dp"
            app:fontFamily="@font/abril_fatface" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:padding="5dp">


                <TextView
                    android:text="@string/amount_people"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="7dp"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/table_amount"
                    android:text="@string/amount_of_people"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="7dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/arrive_date"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="7dp"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/table_date"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="7dp"
                    android:text="@string/arrive_date"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView

                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/arrive_time"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="7dp"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/table_time"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="7dp"
                    android:text="@string/arrive_time"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:padding="5dp">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/special_request"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="7dp"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/table_special"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="7dp"
                    android:text="@string/special_request"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>